clusters/homelab/apps/octelium-cluster/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: octelium-cluster-dataplane
  namespace: istio-system
spec:
  host: octelium-ingress-dataplane.octelium.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
