clusters/homelab/apps/octelium-cluster/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: octelium-cluster
  namespace: istio-system
  annotations:
    homelab.rst.io/access-plane: octelium
    homelab.rst.io/public-funnel: "false"
spec:
  hosts:
    - stinkyboi.com
    - octelium.stinkyboi.com
    - portal.stinkyboi.com
    - octelium-api.stinkyboi.com
    - console.stinkyboi.com
  gateways:
    - istio-system/tailnet-gateway
    - istio-system/octelium-api-gateway
  http:
    - match:
        - authority:
            exact: console.stinkyboi.com
      route:
        - destination:
            host: svc-console-octelium.octelium.svc.cluster.local
            port:
              number: 8080
    - match:
        - authority:
            exact: octelium.stinkyboi.com
      rewrite:
        authority: stinkyboi.com
      route:
        - destination:
            host: octelium-ingress-dataplane.octelium.svc.cluster.local
            port:
              number: 8080
    - route:
        - destination:
            host: octelium-ingress-dataplane.octelium.svc.cluster.local
            port:
              number: 8080
